# orekit_jpype_examples

./: README.md  pyproject.toml
Example-notebooks/: Example_EarthObservation_-_Attitude_Sequence-jpype.ipynb  Example_numerical_prop.ipynb  Phasing.java  Track_Corridor-jpype.ipynb
Example-notebooks/.ipynb_checkpoints/: Example_EarthObservation_-_Attitude_Sequence-jpype-checkpoint.ipynb
Tutorial/: 1_The_Basics.ipynb  2.5_Time.ipynb  2.7_Vectors_and_Coordinates.ipynb  3_Orbit_Definition.ipynb  4_Event_Detectors.ipynb  5.1_TLE_Propagation.ipynb  5_Propagation.ipynb  NodeDetectorTest.py  Plotly_example.ipynb  Untitled.ipynb  orekit_map.ipynb
Tutorial/.ipynb_checkpoints/: 1_The_Basics-checkpoint.ipynb  2_Frames_and_Coordinate_Systems-checkpoint.ipynb
